# adacs-team-management

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  .python-version  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json  project_planning_spec_v1pt0.docx  pyproject.toml  styles.css
.claude/: settings.local.json
.claude/skills/: README.md
.claude/skills/build-css/: SKILL.md
.claude/skills/commit-message/: SKILL.md
.claude/skills/docker-down/: SKILL.md
.claude/skills/docker-logs/: SKILL.md
.claude/skills/docker-migrate/: SKILL.md
.claude/skills/docker-rebuild/: SKILL.md
.claude/skills/docker-seed/: SKILL.md
.claude/skills/docker-up/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.github/workflows/: ci.yml
nginx/: nginx.conf
scripts/: backup-db.sh  check_mail_queue.sh  check_users.sh  configure.sh  deploy.sh  mail-worker.sh  set_role.sh  setup-dns.sh  update.sh  verify_user.sh  vm-bootstrap.sh
src/: .coveragerc  docker-entrypoint.sh  manage.py  run_coverage.sh
src/apps/planning/: admin.py  apps.py  context_processors.py  effort.py  forms.py  models.py  signals.py  urls.py  views.py
src/apps/planning/management/commands/: seed_test_data.py
src/apps/planning/migrations/: 0001_initial.py  0002_alter_semester_semester_type_leave_phase.py  0003_add_effort_available_min_validator.py  0004_add_developer_lane.py  0005_migrate_phases_to_lanes.py  0006_add_phase_indexes.py  0007_project_streams_m2m.py  0008_remove_project_stream_fk.py  0009_tag_stream_add_colour.py  0010_observer_stream_access.py  0011_semester_observer.py  0012_migrate_observer_access.py  0013_alter_developerprofile_user_and_more.py  0014_add_base_effort_weeks.py  0015_semester_developer_tags.py  0016_project_leads_continuation.py  0017_remove_observerprofile_and_allocationtype.py  0018_user_project_access.py  0019_userprojectaccess_all_project_access_and_more.py  0020_alter_projectsemestername_name_alter_stream_name_and_more.py  0021_alter_projectsemestername_name_alter_stream_name_and_more.py  0022_project_continuation_of_semester.py  0023_remove_projectsemestername_add_project_name_semester.py  0024_alter_project_name_and_more.py  0025_developerprofile_preregistration_schema.py  0026_developerprofile_preregistration_data.py  0027_developerprofile_preregistration_finalize.py  0028_fold_weeks_carryover_into_weeks_new.py  0029_remove_projectallocation_weeks_carryover_and_more.py  0030_userprojectaccess_developer_profile_and_more.py
src/apps/planning/templatetags/: planning_extras.py
src/apps/planning/tests/: factories.py  test_csv_import.py  test_effort.py  test_management.py  test_models.py  test_signals.py  test_timeline.py  test_views.py
src/apps/planning/views/: __init__.py  _csv_import.py  _mixins.py  _semester.py  _timeline.py  developers.py  home.py  leave.py  observers.py  people.py  phases.py  planning.py  projects.py  schedule.py  streams.py  tags.py
src/apps/static/js/: scroll_persistence.js
src/apps/static/js/planning/: navbar.js
src/apps/static/js/planning/pages/: colour_entity_editor.js  developers.js  home.js  leave.js  observers.js  people.js  planning.js  projects.js  schedule.js  streams.js  tags.js
src/apps/templates/: base.html
src/apps/templates/account/: login.html  signup.html  verification_sent.html
src/apps/templates/allauth/elements/: badge.html  button.html  field.html  form.html  h1.html  h2.html  panel.html
src/apps/templates/allauth/layouts/: entrance.html  manage.html
src/apps/templates/crispywind/: display_form.html  errors.html  errors_formset.html  field.html  inputs.html  table_inline_formset.html  uni_form.html  uni_formset.html  whole_uni_form.html  whole_uni_formset.html
src/apps/templates/crispywind/layout/: alert.html  baseinput.html  button.html  checkboxselectmultiple.html  checkboxselectmultiple_inline.html  column.html  div.html  field_errors_block.html  field_with_buttons.html  fieldset.html  formactions.html  help_text.html  help_text_and_errors.html  inline_field.html  prepended_appended_text.html  radioselect.html  radioselect_inline.html  row.html  select.html  select_option.html
src/apps/templates/elements/: navbar.html
src/apps/templates/pages/: home.html
src/apps/templates/planning/: developers.html  leave.html  observers.html  people.html  planning.html  projects.html  schedule.html  streams.html  tags.html
src/apps/templates/planning/partials/: project_add_form.html  project_edit_form.html
src/apps/templates/users/: user_detail.html  user_form.html
src/apps/users/: admin.py  forms.py  managers.py  models.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_user_emoji_user_organisation_user_role.py  0003_remove_emoji.py  0004_remove_admin_role.py  0005_role_simplification.py
src/config/: api_router.py  asgi.py  middleware.py  urls.py  wsgi.py
src/config/settings/: base.py  build.py  development.py  docker_dev.py  prod.py  test.py
src/data/seed/: developers.tsv  observers.tsv  projects.tsv
src/data/test/: developers.tsv  developers_invalid.tsv  observers.tsv  observers_invalid.tsv  projects.tsv  projects_invalid.tsv
src/tests/: test_homepage.py  test_users.py  utils.py
